k8s/mongo-express-service.yml
apiVersion : v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 30000
