k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp.com
    - http:
        paths:
        - backend:
            serviceName: mongo-express-service
            servicePort: 80
